<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:theme="@style/AppTheme"
    app:itemIconTint="@color/colorTrueWhite"
    app:itemTextColor="@color/colorTrueWhite"
    android:background="@drawable/gradient_background"
    tools:context=".activities.LabelingActivity"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        tools:context="com.nltweets.twabler.activities.LabelingActivity">

        <Button
            android:id="@+id/button_skipOrSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginEnd="136dp"
            android:background="@drawable/button_skip"
            android:onClick="skipOrSubmit_tweet"
            android:text="@string/button_skip"
            android:textColor="@color/colorAccentDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewToButton_submission" />

        <TextView
            android:id="@+id/textView_labeling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/textView_labeling"
            android:textColor="@color/colorTrueWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/labelsLayout"
            app:layout_constraintTop_toTopOf="@+id/guidelineToolbar" />

        <TextView
            android:id="@+id/textView_tweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/textView_tweet"
            android:textColor="@color/colorTrueWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tweetLayout"
            app:layout_constraintTop_toBottomOf="@+id/labelsLayout" />

        <TextView
            android:id="@+id/textView_submission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/textView_submission"
            android:textColor="@color/colorTrueWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewToButton_submission"
            app:layout_constraintTop_toBottomOf="@+id/tweetLayout" />

        <TextView
            android:id="@+id/textViewToButton_submission"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="start"
            android:gravity="center"
            android:background="@drawable/text_box"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/button_skipOrSubmit"
            app:layout_constraintTop_toBottomOf="@+id/textView_submission" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="top"
            android:background="@drawable/toolbar"
            app:itemIconTint="@color/colorTrueWhite"
            android:layout_marginStart="-2dp"
            android:layout_marginEnd="-2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@color/colorTrueWhite"
                android:textSize="30sp"/>
        </android.support.v7.widget.Toolbar>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/labelsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_box"
            android:padding="15dp"
            app:alignContent="space_between"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="space_between"
            app:layout_constraintBottom_toTopOf="@+id/textView_tweet"
            app:layout_constraintTop_toBottomOf="@+id/textView_labeling">

            <Button
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/label1" />

            <!--   -->
            <Button
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/label2" />

            <Button
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/label4" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/tweetLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:padding="15dp"
            android:background="@drawable/text_box"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:layout_constraintBottom_toTopOf="@+id/textView_submission"
            app:layout_constraintTop_toBottomOf="@+id/textView_tweet" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/menu_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorTrueWhite"
        android:theme="@style/NavigationView"
        app:headerLayout="@layout/menu_header"
        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/activity_menu_drawer">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:background="@drawable/button"
            android:onClick="close_menu"
            android:text="@string/button_close"
            android:textColor="@color/colorPrimaryDark" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>