<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <View
        android:id="@+id/viewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_registration"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            android:background="@color/colorTrueWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="top|end"
            android:orientation="vertical"
            android:paddingTop="40dp">


            <EditText
                android:id="@+id/editText_emailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editText_emailReg"
                android:inputType="text"
                android:theme="@style/EditTextSelectedTheme"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/editText_createLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editText_createLogin"
                android:inputType="text"
                android:theme="@style/EditTextSelectedTheme"
                android:textSize="25sp"  />


            <EditText
                android:id="@+id/editText_createPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editText_createPassword"
                android:inputType="text"
                android:theme="@style/EditTextSelectedTheme"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="true"
                android:background="@color/colorLoginButton"
                android:textSize="25sp"
                android:textColor="@color/colorTrueWhite"
                android:padding="10dp"
                android:text="@string/button_register"
                android:onClick="register"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
